# google-adk

./: .env.example  pyproject.toml
hello/: .env.example  agent.py  deploy.py  requirements.txt
