[project]
name = "google-adk-agents"
version = "0.1.0"
description = "Sample Google ADK agents."
authors = [{ name = "alphasec" }]
readme = "README.md"
license = {text = "MIT"}
keywords = ["google", "adk", "agents", "gemini"]

[tool.poetry]
packages = [{include = "hello"}]

[tool.poetry.dependencies]
python = "^3.10"
google-adk = "^1.0.0"
google-cloud-aiplatform = { extras = [
    "adk",
    "agent-engines",
], version = "^1.93.0" }
google-genai = "^1.9.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
